[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "isbn-lookup"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2.10.6",
]

[project.scripts]
isbn-lookup = "isbn_lookup:main"

[dependency-groups]
dev = [
    "basedpyright>=1.28.3",
]
